# DoItRight

./: meson.build
data/: com.github.ctieben.doitright.appdata.xml  com.github.ctieben.doitright.appdata.xml.in  com.github.ctieben.doitright.desktop  com.github.ctieben.doitright.desktop.in
debian/: changelog.dch  changelog.dch.save  control  copyright
po/: POTFILES  com.github.ctieben.doitright.pot  com.github.ctieben.doitright.pot~  de.po  en.po
src/: Application.vala
